@@ -100,6 +100,8 @@
 	One-sample svyttest() on logical variable now tests for P(TRUE==0) not P(FALSE==0)
 	(Stephanie Zimmer)
 
+	rename svykm.fit to svykm_fit because CRAN tests
+
 4.1-1	CRAN
 
 4.1	svyquantile() has been COMPLETELY REWRITTEN. The old version is available
